deployment/03-deployment-django-cloudsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: app-talana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      serviceAccountName: django-app-ksa

      containers:
        - name: app
          image: us-east1-docker.pkg.dev/marine-guard-482400-k3/apps/django-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
            - "--private-ip"
            - "--port=5432"
            - "marine-guard-482400-k3:us-east1:challenge-pg"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
