deployment/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc
  namespace: app-talana
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
